# ChangeLog for app-i18n/ibus-qt
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/ibus-qt/ChangeLog,v 1.19 2013/03/25 11:23:46 naota Exp $

  25 Mar 2013; Naohiro Aota <naota@gentoo.org>
  +files/ibus-qt-1.3.1-qvariant.patch, -ibus-qt-1.3.0.ebuild,
  ibus-qt-1.3.1.ebuild:
  Add upstream patch to deal with clang. #439676; Drop old version.

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> ibus-qt-1.3.0.ebuild,
  ibus-qt-1.3.1.ebuild:
  Move Qt dependencies to the new category

  10 Feb 2013; Naohiro Aota <naota@gentoo.org> -ibus-qt-1.2.0.20091216.ebuild,
  -ibus-qt-1.2.0.20091217.ebuild, ibus-qt-1.3.0.ebuild, ibus-qt-1.3.1.ebuild:
  Covert icu to subslot dependency. #455900; Drop old versions.

  10 Dec 2012;  <naota@gentoo.org> +files/ibus-qt-1.3.1-gold.patch,
  ibus-qt-1.3.1.ebuild:
  Add a patch to link with missing libraries

  25 Oct 2012;  <naota@gentoo.org> +files/ibus-qt-1.3.1-display-unset.patch,
  ibus-qt-1.3.0.ebuild, ibus-qt-1.3.1.ebuild:
  Add upstream patch to avoid crash when DISPLAY is unset. #439134

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> ibus-qt-1.2.0.20091216.ebuild,
  ibus-qt-1.2.0.20091217.ebuild, ibus-qt-1.3.0.ebuild, ibus-qt-1.3.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  16 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> ibus-qt-1.3.1.ebuild:
  x86 stable wrt bug #396809

  03 Feb 2012; Agostino Sarubbo <ago@gentoo.org> ibus-qt-1.3.1.ebuild:
  Stable for amd64, wrt bug #396809

*ibus-qt-1.3.1 (12 May 2011)

  12 May 2011; MATSUU Takuto <matsuu@gentoo.org> +ibus-qt-1.3.1.ebuild:
  Version bumped.

  10 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> ibus-qt-1.3.0.ebuild:
  x86 stable wrt bug #350624

  05 Jan 2011; Markos Chandras <hwoarang@gentoo.org> ibus-qt-1.3.0.ebuild:
  Stable on amd64 wrt bug #350624

  26 May 2010; Pacho Ramos <pacho@gentoo.org> ibus-qt-1.2.0.20091217.ebuild:
  stable amd64, bug 305763

*ibus-qt-1.3.0 (03 Apr 2010)
