@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>cjk</herd>
-	<longdescription lang="en">IBus means Intelligent Input Bus. It is a new input framework for Linux OS. It provides
+  <herd>cjk</herd>
+  <longdescription lang="en">IBus means Intelligent Input Bus. It is a new input framework for Linux OS. It provides
 full featured and user friendly input method user interface. It also may help
 developers to develop input method easily.</longdescription>
-	<upstream>
-		<remote-id type="google-code">ibus</remote-id>
-	</upstream>
+  <upstream>
+    <remote-id type="google-code">ibus</remote-id>
+  </upstream>
 </pkgmetadata>
