@@ -1,6 +1,10 @@
 # ChangeLog for app-i18n/ibus-qt
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/ibus-qt/ChangeLog,v 1.19 2013/03/25 11:23:46 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/ibus-qt/ChangeLog,v 1.20 2013/11/11 08:14:10 jlec Exp $
+
+  11 Nov 2013; Justin Lecher <jlec@gentoo.org> ibus-qt-1.3.1.ebuild,
+  metadata.xml:
+  Fix and kexword for prefix
 
   25 Mar 2013; Naohiro Aota <naota@gentoo.org>
   +files/ibus-qt-1.3.1-qvariant.patch, -ibus-qt-1.3.0.ebuild,
